<resources>
    <string name="app_name">GopeText</string>

    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_profile">Perfil</string>

    <string name="title_app">GOPETEXT</string>
    <string name="title_login">Login</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_enter">Entrar</string>
    <string name="btn_register">Registrarse</string>

    <string name="cd_back">Volver</string>
    <string name="chat_title">Nombre del chat</string>
    <string name="cd_leave_group">Salir del grupo</string>
    <string name="hint_message">Escribe un mensaje</string>

    <string name="btn_change_photo">Cambiar foto</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="hint_age">Edad</string>
    <string name="btn_save">Guardar</string>

    <string name="title_register">Registro</string>
    <string name="msg_register_instructions">Por favor llene todos los campos, al terminar da click en el botón (REGISTRARSE) y revise por favor su correo para validarlo</string>
    <string name="hint_register_name">Ingrese su nombre</string>
    <string name="hint_register_last_name">Ingrese su apellido</string>
    <string name="hint_register_age">Ingrese su edad</string>
    <string name="hint_register_email">Ingrese su E-mail</string>
    <string name="hint_register_password">Ingrese su contraseña</string>
    <string name="hint_register_confirm_password">Confirme su contraseña</string>

    <string name="title_create_group">Crear Grupo</string>
    <string name="hint_group_name">Nombre del grupo</string>
    <string name="btn_create_group">Crear Grupo</string>

    <string name="btn_edit">EDITAR</string>

    <string name="placeholder_user_name">Nombre del usuario</string>

    <string name="nav_chats">Chats</string>
    <string name="nav_group">Crear Grupo</string>
    <string name="nav_users">Usuarios</string>
    <string name="nav_profile">Perfil</string>
    <string name="logout">Cerrar Sesión</string>

</resources>
