<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAppTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:height="70dp"
                    android:padding="15dp"
                    android:background="#8000D9"
                    android:letterSpacing="0.05"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_register"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tvAppTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/msg_register_instructions"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tvLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint_register_name"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint_register_last_name"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint_register_age"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etLastName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint_register_email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etAge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint_register_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint_register_confirm_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="#8000D9"
                    android:text="@string/btn_register"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btnBackToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8000D9"
                    android:text="@string/cd_back"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.879"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.941" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




